--- a/src/styles/elements/_space.scss
+++ b/src/styles/elements/_space.scss
@@ -5,13 +5,26 @@
 		gap: var(--space);
 
 		min-width: calc(var(--ship-size) * 11);
+
+		@media screen and (max-width: $bp-md) {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
 	}
 	&__inner-wrap {
 		display: grid;
 		grid-template-columns: 40px 1fr;
+
+		@media screen and (max-width: $bp-xsm) {
+			grid-template-columns: 40 1fr;
+		}
 	}
 	&__box {
 		&--enemy {}
+		&--player .space__fight-item:hover {
+			background: var(--color-light);
+		}
 	}
 
 	// numbers
@@ -21,6 +34,10 @@
 
 		padding-left: var(--ship-size);
 		height: var(--ship-size);
+
+		@media screen and (max-width: $bp-xsm) {
+			padding-left: calc(var(--ship-size) + 15px);
+		}
 	}
 	&__number-item {
 		display: inline-flex;
@@ -30,6 +47,10 @@
 		font-weight: bold;
 		font-size: 1.2rem;
 		color: var(--color-dark);
+
+		@media screen and (max-width: $bp-xsm) {
+			font-size: .8rem;
+		}
 	}
 
 	// latters
@@ -48,10 +69,17 @@
 		font-weight: bold;
 		font-size: 1.2rem;
 		color: var(--color-dark);
+
+		@media screen and (max-width: $bp-xsm) {
+			font-size: .8rem;
+		}
 	}
 
 	// fight
-	&__fight-wrap {}
+	&__fight-wrap {
+		max-width: calc(var(--ship-size) * 10); // box 40x40, box count 10
+		min-width: calc(var(--ship-size) * 10); // box 40x40, box count 10
+	}
 	&__fight-list {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, var(--ship-size));
