--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,10 +14,23 @@
 	--color-gray: #C6C6CC;
 	--color-green: #49cb8f;
 }
+
+// X-Small devices (portrait phones, less than 576px)
+$bp-xsm: 575.98px;
+// Small devices (landscape phones, less than 768px)
+$bp-sm: 767.98px;
+// Medium devices (tablets, less than 992px)
+$bp-md: 991.98px;
+// Large devices (desktops, less than 1200px)
+$bp-lg: 1199.98px;
+// X-Large devices (large desktops, less than 1400px)
+$bp-xl: 1399.98px;
+
 body {
 	font-family: 'Roboto', 'Arial', sans-serif;
 	min-height: 100vh;
 	background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+	font-size: 1rem;
 
 	& * {
 		box-sizing: border-box;
@@ -35,7 +48,23 @@ body {
 	display: grid;
 	grid-template-columns: 1fr 200px;
 	gap: var(--space);
+
+	@media screen and (max-width: $bp-lg) {
+		grid-template-columns: auto;
+	}
 }
 
 @import './elements/space';
 @import './elements/ships';
+
+
+@media screen and (max-width: $bp-xsm) {
+	:root {
+		--site-w: 1160px;
+		--site-padding: 20px;
+		--space: 10px;
+
+		// ships
+		--ship-size: 25px;
+	}
+}
