--- a/src/styles/elements/_ships.scss
+++ b/src/styles/elements/_ships.scss
@@ -18,7 +18,7 @@
 		min-width: var(--ship-size);
 		max-width: 300px;
 
-		background: #989898;
+		background: var(--color-green);
 		cursor: grab;
 	}
 }
